--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,8 @@
     <div id="banner">
       <%= image_tag 'logo.svg', alt: 'The Pragmatic Bookshelf' %>
       <span class="title"><%= @page_title %></span>
+      <%= link_to "Products", products_path %>
+      <%= link_to "Carts", carts_path %>
     </div>
     <div id="columns">
       <div id="side">
