--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -6,8 +6,8 @@
     <% cache product do %>
       <div class="entry">
         <%= image_tag(product.image_url) %>
-        <h3><%= product.title %></h3>
-        <%= sanitize(product.description) %>
+        <h3><em><%= product.title %></em></h3>
+        <p><%= sanitize(product.description) %></p>
         <div class="price_line">
           <span class="price"><%= number_to_currency(product.price) %></span>
           <%= button_to 'Add to Cart', line_items_path(product_id: product) %>
