--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,10 +12,17 @@
       <%= image_tag 'logo.svg', alt: 'The Pragmatic Bookshelf' %>
       <span class="title"><%= @page_title %></span>
       <%= link_to "Products", products_path %>
-      <%= link_to "Carts", carts_path %>
     </div>
     <div id="columns">
       <div id="side">
+        <div id="cart">
+          <% if @cart %>
+            <%= hidden_div_if(@cart.line_items.empty?, id: 'cart') do %>
+            <%= render @cart %>
+            <% end %>
+          <% end %>
+        </div>
+        
         <ul>
           <li><%= link_to "Home",   store_index_path %></li>
           <li><a href="http://www..../fag">Questions</a></li>
