--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -10,8 +10,9 @@
         <p><%= sanitize(product.description) %></p>
         <div class="price_line">
           <span class="price"><%= number_to_currency(product.price) %></span>
-          <%= button_to 'Add to Cart', line_items_path(product_id: product) %>
-          <%= pluralize(@counter, "time") if @counter >= 5 %>
+          <%= button_to 'Add to Cart', line_items_path(product_id: product),
+            remote: true %>
+          <!--%= pluralize(@counter, "time") if @counter >= 5 %-->
         </div>
       </div>
     <% end %>
