--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -1,6 +1,6 @@
 <div class="depot_form">
   <fieldset>
-    <legen>Please Enter Your Details</legen>
+    <legend>Please Enter Your Details</legend>
     <%= render 'form', order: @order %>
   </fieldset>
 </div>
